fix alignment in timeline time header cells

--- a/timeline/src/styles/_timeline-slots.scss
+++ b/timeline/src/styles/_timeline-slots.scss
@@ -38,6 +38,12 @@ vertical slots in both the header AND the body
   justify-content: center; // horizontal align
 }
 
+.fc-timeline-header-row-chrono { // a row of times
+  .fc-timeline-slot-frame {
+    justify-content: flex-start; // horizontal align left or right
+  }
+}
+
 .fc-timeline-slot-cushion {
   padding: 4px 5px; // TODO: unify with fc-col-header?
 }
